sumo/tests/netconvert/import/XML/errors/broken_edge/edge#length__false1/errors.netconvert
Error: Attribute 'speed' is missing in definition of edge '1'.
Quitting (on error).
